Fixes EJournal being right aligned

--- a/osu.css
+++ b/osu.css
@@ -5,6 +5,11 @@
 	margin-right: 1em;
 }
 
+.EXLALMAResultsTileNoFacets {
+  margin-right: 40% !important;
+  widthL 60% !important;
+}
+
 div#resultsTileNoId.EXLResultsTile.EXLALMAResultsTileNoFacets,
 div#resultsTileNoId.EXLResultsTile.EXLCustomLayoutContainer,
 {
